deploy/openshift/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: lineage-incluster
  labels:
    app.kubernetes.io/name: lineage
